# podcastify

.github/workflows/: main.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/backend/: main.py  settings.py
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: URLForm.tsx  page.tsx
